tests/incremental_path/incremental_path.exp

Should resolve to dir/node_modules/b.js which is number
Error ------------------------------------------------------------- dir/a.js:2:2

Error: dir/a.js:2
  2: (require('b'): boolean);
      ^^^^^^^^^^^^ Cannot cast `require(...)` to boolean because number [1] is incompatible with boolean [2].
  References:
    2: module.exports = 0;
                        ^ [1]: number. See: dir/node_modules/b.js:2
    2: (require('b'): boolean);
                      ^^^^^^^ [2]: boolean


Found 1 error

Should resolve to node_modules/b.js which is a string
Error ------------------------------------------------------------- dir/a.js:2:2

Error: dir/a.js:2
  2: (require('b'): boolean);
      ^^^^^^^^^^^^ Cannot cast `require(...)` to boolean because string [1] is incompatible with boolean [2].
  References:
    2: module.exports = "";
                        ^^ [1]: string. See: node_modules/b.js:2
    2: (require('b'): boolean);
                      ^^^^^^^ [2]: boolean


Found 1 error

Should resolve to dir/node_modules/b.js which is number
Error ------------------------------------------------------------- dir/a.js:2:2

Error: dir/a.js:2
  2: (require('b'): boolean);
      ^^^^^^^^^^^^ Cannot cast `require(...)` to boolean because number [1] is incompatible with boolean [2].
  References:
    2: module.exports = 0;
                        ^ [1]: number. See: dir/node_modules/b.js:2
    2: (require('b'): boolean);
                      ^^^^^^^ [2]: boolean


Found 1 error
